@@ -45,6 +45,7 @@ MovieJukebox 2.3 BETA
  - Enhancement  #1770 ComingSoon trailer download
  - Fixed defect #1784 Details page's XML deleted if Jukebox Clean (-c) and HTML turned off (-h)
  - Enhancement  #1778 Add total number of titles to the XML files
+ - Enhancement  #1787 Add ability to use file hash for anidb lookup
 
 MovieJukebox 2.2
 ----------------
